@@ -33,6 +33,7 @@
                     <xs:element name="target" type="xs:string" minOccurs="1" maxOccurs="1" />
                     <xs:element name="duration" type="xs:string" minOccurs="1" maxOccurs="1" />
                     <xs:element name="fv" type="xs:string" minOccurs="1" maxOccurs="1" />
+                    <xs:element name="useskill" type="xs:string" minOccurs="0" maxOccurs="1" />
                     <xs:element name="bonus" type="bonusTypes"  minOccurs="0" maxOccurs="1" />
                     <xs:element name="source" type="xs:string" minOccurs="1"  maxOccurs="1" />
                     <xs:element name="page" type="xs:string" minOccurs="1"  maxOccurs="1" />
